# tf-new-op-example

./: .gitignore  .se3toRT_transform.cc.swp  CMakeLists.txt  cuda_op_kernel.cc  cuda_op_kernel.cu  gvnn_grads.py  gvnn_tests.py  inner_product.cc  inner_product_tests.py  ntfm3d.cc  pinhole_projection.cc  se3_layer_tests.py  se3_transform.cc  se3_transform_points_grad.cc  se3toMatrixRt.cc  se3toMatrixRt_grad.cc  se3toRT_transform.cc  tf_se3.py  tf_so3.py
